// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render component of a specified size 1`] = `
LoadedCheerio {
  "0": Node {
    "attribs": Object {
      "class": "nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-qXFXw-color-default nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-iHugVF-size-md nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-bAEoQm-rounded-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-ihFPSGE-css only-text-avatar",
      "data-state": "ready",
    },
    "children": Array [
      Node {
        "attribs": Object {
          "class": "nextui-avatar-bg",
        },
        "children": Array [],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
    ],
    "name": "span",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": Node {
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": null,
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "data-state": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "data-state": undefined,
    },
  },
  "_root": LoadedCheerio {
    "0": Node {
      "children": Array [
        Node {
          "attribs": Object {},
          "children": Array [
            Node {
              "attribs": Object {},
              "children": Array [],
              "name": "head",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": Node {
                "attribs": Object {},
                "children": Array [],
                "name": "body",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
            Node {
              "attribs": Object {},
              "children": Array [],
              "name": "body",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "attribs": Object {},
                "children": Array [],
                "name": "head",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "html",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {},
          "x-attribsPrefix": Object {},
        },
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Avatar should render correctly with an icon 1`] = `"<span class=\\"nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-qXFXw-color-default nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-iHugVF-size-md nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-bAEoQm-rounded-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-iPJLV-css only-text-avatar\\" data-state=\\"ready\\"><span class=\\"nextui-avatar-bg\\"></span><span class=\\"nextui-avatar-icon\\"><svg class=\\"\\"></svg></span></span>"`;

exports[`Avatar should render text element 1`] = `
LoadedCheerio {
  "0": Node {
    "attribs": Object {
      "class": "nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-qXFXw-color-default nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-iHugVF-size-md nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-bAEoQm-rounded-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-iPJLV-css only-text-avatar",
      "data-state": "ready",
    },
    "children": Array [
      Node {
        "attribs": Object {
          "class": "nextui-avatar-bg",
        },
        "children": Array [],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
    ],
    "name": "span",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": Node {
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": null,
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "data-state": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "data-state": undefined,
    },
  },
  "_root": LoadedCheerio {
    "0": Node {
      "children": Array [
        Node {
          "attribs": Object {},
          "children": Array [
            Node {
              "attribs": Object {},
              "children": Array [],
              "name": "head",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": Node {
                "attribs": Object {},
                "children": Array [],
                "name": "body",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
            Node {
              "attribs": Object {},
              "children": Array [],
              "name": "body",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "attribs": Object {},
                "children": Array [],
                "name": "head",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "html",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {},
          "x-attribsPrefix": Object {},
        },
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Avatar should render text element 2`] = `
LoadedCheerio {
  "0": Node {
    "attribs": Object {
      "class": "nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-qXFXw-color-default nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-iHugVF-size-md nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-bAEoQm-rounded-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-iPJLV-css only-text-avatar",
      "data-state": "ready",
    },
    "children": Array [
      Node {
        "attribs": Object {
          "class": "nextui-avatar-bg",
        },
        "children": Array [],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Node {
          "attribs": Object {
            "class": "nextui-avatar-text",
          },
          "children": Array [
            Node {
              "data": "text",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
      Node {
        "attribs": Object {
          "class": "nextui-avatar-text",
        },
        "children": Array [
          Node {
            "data": "text",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Node {
          "attribs": Object {
            "class": "nextui-avatar-bg",
          },
          "children": Array [],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
    ],
    "name": "span",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": Node {
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": null,
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "data-state": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "data-state": undefined,
    },
  },
  "_root": LoadedCheerio {
    "0": Node {
      "children": Array [
        Node {
          "attribs": Object {},
          "children": Array [
            Node {
              "attribs": Object {},
              "children": Array [],
              "name": "head",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": Node {
                "attribs": Object {},
                "children": Array [],
                "name": "body",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
            Node {
              "attribs": Object {},
              "children": Array [],
              "name": "body",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "attribs": Object {},
                "children": Array [],
                "name": "head",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "html",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {},
          "x-attribsPrefix": Object {},
        },
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Avatar should work correctly with different sizes 1`] = `"<div><span class=\\"nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-qXFXw-color-default nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-jROyhw-size-xs nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-bAEoQm-rounded-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-iPJLV-css only-text-avatar\\" data-state=\\"ready\\"><span class=\\"nextui-avatar-bg\\"></span></span><span class=\\"nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-qXFXw-color-default nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-bHlgBq-size-sm nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-bAEoQm-rounded-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-iPJLV-css only-text-avatar\\" data-state=\\"ready\\"><span class=\\"nextui-avatar-bg\\"></span></span><span class=\\"nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-qXFXw-color-default nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-iHugVF-size-md nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-bAEoQm-rounded-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-iPJLV-css only-text-avatar\\" data-state=\\"ready\\"><span class=\\"nextui-avatar-bg\\"></span></span><span class=\\"nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-qXFXw-color-default nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-lmZTtQ-size-lg nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-bAEoQm-rounded-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-iPJLV-css only-text-avatar\\" data-state=\\"ready\\"><span class=\\"nextui-avatar-bg\\"></span></span><span class=\\"nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-qXFXw-color-default nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-ehDSPw-size-xl nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-bAEoQm-rounded-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-iPJLV-css only-text-avatar\\" data-state=\\"ready\\"><span class=\\"nextui-avatar-bg\\"></span></span></div>"`;

exports[`Avatar should work with a gradient color 1`] = `"<span class=\\"nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-lcNuyd-color-gradient nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-iHugVF-size-md nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-bAEoQm-rounded-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-iPJLV-css only-text-avatar\\" data-state=\\"ready\\"><span class=\\"nextui-avatar-bg\\"></span></span>"`;

exports[`Avatar should work with different colors 1`] = `"<div><span class=\\"nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-eeabkr-color-primary nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-iHugVF-size-md nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-bAEoQm-rounded-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-iPJLV-css only-text-avatar\\" data-state=\\"ready\\"><span class=\\"nextui-avatar-bg\\"></span></span><span class=\\"nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-jzyGMN-color-secondary nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-iHugVF-size-md nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-bAEoQm-rounded-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-iPJLV-css only-text-avatar\\" data-state=\\"ready\\"><span class=\\"nextui-avatar-bg\\"></span></span><span class=\\"nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-fJMMFA-color-success nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-iHugVF-size-md nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-bAEoQm-rounded-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-iPJLV-css only-text-avatar\\" data-state=\\"ready\\"><span class=\\"nextui-avatar-bg\\"></span></span><span class=\\"nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-eCIbjl-color-warning nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-iHugVF-size-md nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-bAEoQm-rounded-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-iPJLV-css only-text-avatar\\" data-state=\\"ready\\"><span class=\\"nextui-avatar-bg\\"></span></span><span class=\\"nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-gYTGZH-color-error nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-iHugVF-size-md nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-bAEoQm-rounded-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-iPJLV-css only-text-avatar\\" data-state=\\"ready\\"><span class=\\"nextui-avatar-bg\\"></span></span></div>"`;

exports[`Avatar should work with pointer 1`] = `"<span class=\\"nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-qXFXw-color-default nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-iHugVF-size-md nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-gsmDXe-pointer-true nextui-c-fFabR-bAEoQm-rounded-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-iPJLV-css only-text-avatar\\" data-state=\\"ready\\"><span class=\\"nextui-avatar-bg\\"></span></span>"`;

exports[`Avatar should work with zoomed 1`] = `"<span class=\\"nextui-c-fFabR nextui-c-PJLV nextui-c-ldmKBv nextui-c-fFabR-qXFXw-color-default nextui-c-fFabR-duCSmO-textColor-default nextui-c-fFabR-iHugVF-size-md nextui-c-fFabR-krOtXB-borderWeight-normal nextui-c-fFabR-bAEoQm-rounded-true nextui-c-fFabR-OUZAS-zoomed-true nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-c-fFabR-iPJLV-css only-text-avatar\\" data-state=\\"ready\\"><span class=\\"nextui-avatar-bg\\"></span></span>"`;
